# sql_fmt

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md  dprint.json  jsr.jsonc  justfile  package.json
.github/workflows/: publish.yml  test.yml
extra/: sql_fmt_config.d.ts  sql_fmt_esm.js  sql_fmt_node.js  sql_fmt_vite.js  sql_fmt_web.d.ts  sql_fmt_web.js
scripts/: build.sh  doc.d.ts  package.mjs  patch.mjs
src/: config.rs  lib.rs
test_bun/: bun.spec.ts
test_data/: select_query_with_inner_join.sql  select_query_with_inner_join.sql.snap  simple_insert_query.sql  simple_insert_query.sql.snap  simple_set_schema_queries.sql  simple_set_schema_queries.sql.snap
test_deno/: deno.test.ts
test_node/: test-node.mjs
