[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM Based SQL Formatter"
name        = "sql_fmt"

edition    = "2021"
homepage   = "https://github.com/wasm-fmt/sql_fmt"
keywords   = ["wasm", "sql", "formatter"]
license    = "MIT"
readme     = "README.md"
repository = "https://github.com/wasm-fmt/sql_fmt"
version    = "0.0.2"


[dependencies]
serde              = "1.0.200"
serde-wasm-bindgen = "0.6"
serde_json         = "1.0"
sqlformat          = "0.2.3"
wasm-bindgen       = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]
