[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM Based SQL Formatter"
name        = "sql_fmt"

edition    = "2021"
homepage   = "https://github.com/wasm-fmt/sql_fmt"
keywords   = ["wasm", "sql", "formatter"]
license    = "MIT"
readme     = "README.md"
repository = "https://github.com/wasm-fmt/sql_fmt"
version    = "0.1.0"

	[package.metadata.wasm-pack.profile.release]
	wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
serde              = "1.0"
serde-wasm-bindgen = "0.6"
serde_json         = "1.0"
sqlformat          = "0.5.0"
wasm-bindgen       = "0.2.99"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
